--- a/crypto_project/customer/templates/_profile_mob.html
+++ b/crypto_project/customer/templates/_profile_mob.html
@@ -1,4 +1,7 @@
 <div class="card profile-info d-flex flex-row">
+    <span class="profile-info-icon d-flex align-items-center justify-content-center">
+        <i class="icon icon-user"></i>
+    </span>
     <div class="profile-info-wrapp">
         <span>{{ request.customer.user.name }}</span>
         <table class="profile-table table align-middle">
