--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'site/css/fontello.css' %}">
     {% block custom_css %}{% endblock %}
 </head>
-<body>
+<body translate="no">
     {% block content %}
 
     {% endblock %}
