--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -10,14 +10,21 @@
         </div>
     </div>
       <div class="row mb-4">
-        <div class="col-3">
+        <div class="col-12 col-xl-3 d-none d-xl-block">
             {% include "_profile.html" %}
         </div>
-        <div class="col-6">
+        <div class="col-12 col-xl-6">
             {% include "_transaction.html" %}
         </div>
-        <div class="col-3">
-          {% include "_contacts.html" %}
+        <div class="col-12 col-xl-3">
+            <div class="row">
+                <div class="col-12 col-md-6 d-block d-xl-none mt-4">
+                    {% include "_profile_mob.html" %}
+                </div>
+                <div class="col-12 col-md-6 col-xl-12 my-4 mt-xl-0">
+                  {% include "_contacts.html" %}
+                </div>
+            </div>
         </div>
       </div>
     </div>
