--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -71,6 +71,10 @@ label {
     line-height: 16px;
 }
 
+.form-label {
+    margin-left: 15px;
+}
+
 .form-select,
 .form-control {
     border-radius: 12px;
