--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -19,7 +19,7 @@
         <div class="col-12 col-xl-3">
             <div class="row">
                 <div class="col-12 col-md-6 d-block d-xl-none mt-4">
-                    {% include "_profile_mob.html" %}
+                    {% include "_profile.html" %}
                 </div>
                 <div class="col-12 col-md-6 col-xl-12 my-4 mt-xl-0">
                   {% include "_contacts.html" %}
