--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -9,7 +9,7 @@
             {% include "_platform.html" %}
         </div>
     </div>
-      <div class="row mb-4">
+      <div class="row">
         <div class="col-12 col-xl-3 d-none d-xl-block">
             {% include "_profile.html" %}
         </div>
@@ -77,7 +77,8 @@
                         'X-CSRFToken': csrftoken
                     },
                     success: function(response) {
-                        debugger
+                        billForm.reset()
+                        validate()
                     },
                     error: function(xhr, status, error) {
                         debugger
