--- a/crypto_project/customer/templates/_profile.html
+++ b/crypto_project/customer/templates/_profile.html
@@ -13,7 +13,7 @@
             </tr>
             <tr>
               <td class="text-start no-border">Телефон:</td>
-              <td class="text-end no-border">{{ request.customer.user.phone_number }}</td>
+              <td class="text-end no-border">{{ request.customer.phone_number }}</td>
             </tr>
             <tr>
               <td class="text-start no-border">Email:</td>
