--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -194,16 +194,8 @@
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleInputPassword2" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword2">
-                            </div>
-                            <div class="mb-3">
                                 <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                <textarea cols="50" class="form-control" id="exampleFormControlTextarea1"></textarea>
                             </div>
                             <div class="d-grid">
                                 <button type="button" class="btn btn-success">Отправить</button>
